--- a/C2-L01.qmd
+++ b/C2-L01.qmd
@@ -1,3 +1,17 @@
+---
+title: "Statistical Modeling and Monte Carlo estimation"
+subtitle: "Bayesian Statistics: Techniques and Models"
+categories:
+  - Bayesian Statistics
+  - Monte Carlo Estimation
+keywords:
+  - Statistical Modeling
+  - MCMC
+  - Overfitting
+  - Bias---Variance trade-off
+---
+
+
 # Note - Statistical Modeling
 
 ## Objectives
@@ -80,7 +94,9 @@ The step is addressed in detail in most introductory statistics courses.
 Generally, it is desirable to find a model where the parameters we estimate can be interpreted in the context of the original problem. You might also have to strike a balance between model complexity, and model generalizability. This is often referred to as **the bias variance trade-off**. Large complex models, might be able to fit your particular dataset very well. But may fail to generalize to future data.
 
 ::: {#exm-overfitting-model}
-#### overfittng
+
+#### overfitting
+
 Let's look at an example of this. Let's suppose your data looked like ![chart](images/c2l01-ss-02-graph.png){.column-margin} where $x$ is your *explanatory variable*, $y$ is your *response variable*. And you have points like these. One possible model you could fit would be just a linear regression going through the points.
 
 Another possibility for model you could fit here would be essentially an interpolator that makes sure it goes through every single point. Now, consider a future scenario where you've got another dataset just like this one with a new cloud of points. You can imagine that perhaps this interpolated model, which fit the original dataset perfectly, might struggle on a future dataset.
