--- a/C2-L02.qmd
+++ b/C2-L02.qmd
@@ -1,3 +1,13 @@
+---
+title: "Bayesian Modeling"
+subtitle: "Bayesian Statistics: Techniques and Models"
+categories:
+  - Bayesian Statistics
+  - Monte Carlo Estimation
+keywords:
+  - Statistical Modeling
+---
+
 # Notes - Bayesian Modeling
 
 ## Components of a Bayesian Model
@@ -83,7 +93,7 @@ $$
 \\ &= \frac{p(\theta,y)}{\int p(\theta,y)}
 \\ &= \frac{p(y \mid \theta)\ p(\theta)}{\int p(y \mid \theta)\ p(\theta)\ d\theta}
 \end{aligned}
-$$
+$$ {#eq-posterior-anatomy}
 :::
 
 ::: {#qst-question}
@@ -250,7 +260,7 @@ Because the denominator is a function of the y's only, which are known values, t
 
 We'll first look at an example of a one parameter model that is not conjugate.
 
-::: {#exp-company-personel}
+::: {#exp-company-personnel}
 #### Company Personnel
 
 Suppose we have values that represent the percentage change in total personnel from last year to this year for, we'll say, ten companies. These companies come from a particular industry. We're going to assume for now, that these are independent measurements from a normal distribution with a known variance equal to one, but an unknown mean.
