--- a/C1-L01_non_pdf.qmd
+++ b/C1-L01_non_pdf.qmd
@@ -1,3 +1,7 @@
+---
+title: "Probability"
+subject: "Bayesian Statistics: From Concept to Data Analysis"
+---
 # Probability {#sec-probability}
 
 ```{python}
