--- a/C1-L01.qmd
+++ b/C1-L01.qmd
@@ -1,4 +1,32 @@
+---
+title: "Probability"
+subject: "Bayesian Statistics: From Concept to Data Analysis"
+categories:
+  - Bayesian Statistics
+  - MonteCarlo Estimation
+keywords:
+  - Odds
+  - Probability
+  - Expectation
+  - σ-Algebra
+  - Probability Measure
+  - Probability Space
+  - Probability Paradigms
+  - Coherence
+  - Abraham de Moivre
+  - Bruno de Finetti
+  - Objectivity
+  - Variance
+  - Covariance
+  - Correlation
+---
+
+
 # Probability {#sec-probability}
+
+In these notes I supplement the course material with my own notes for establishing an axiomatic foundation for probability
+These were omitted from the course material, but alluded to in the course and their absence was so irksome that I decided to add them to my notes.
+
 
 ```{python}
 #| echo: false
@@ -43,7 +71,7 @@ $$ {#eq-event}
 Let $\mathcal{F}$ denote a family of subsets of a sample space $\Omega$, and $A$ any such subset. Then $A$ is called an **event**
 :::
 
-::: {#def-elementry-event}
+::: {#def-elementary-event}
 ## Elementary Event
 
 An event composed of a single point $\omega$ is called an **elementary event**.
@@ -72,17 +100,25 @@ $\emptyset$ is called the **impossible event**.
 
 A family of events $\mathcal{F}$ with the following properties:
 
-1\. $\Omega$ is the universal set
+1. $\Omega$ is the universal set
 
-$$\Omega \in \mathcal{F}$$ {#eq-sigma1}
+    $$
+    \Omega \in \mathcal{F}
+    $$ {#eq-sigma1}
 
-2.  $\mathcal{F}$ is closed under complementation:
+2.  $\mathcal{F}$ is closed under complement operation:
 
-$$\forall A \in \mathcal{F} \implies A^c \in \mathcal{F}$$ {#eq-sigma2}
+    $$
+    \forall A \in \mathcal{F} \implies A^c \in \mathcal{F}
+    $$ {#eq-sigma2}
 
 3.  $\mathcal{F}$ is closed under countable unions:
 
-$$\exists A_i \in \mathcal{F} i=1,2,3... \implies \bigcup_{n=1}^\infty {A_i} \in \mathcal{F}$$ {#eq-sigma3} is called a $\sigma$-algebra or a $\sigma$-field .
+    $$
+    \exists A_i \in \mathcal{F} \quad  i \in \mathcal{N} \implies \bigcup_{n=1}^\infty {A_i} \in \mathcal{F}
+    $$ {#eq-sigma3} 
+
+is called a $\sigma$-algebra or a $\sigma$-field .
 :::
 
 some properties of $\sigma$-algebra
@@ -91,21 +127,35 @@ some properties of $\sigma$-algebra
 -   [An epsilon of room: pages from year three of a mathematical blog](https://terrytao.files.wordpress.com/2010/02/epsilon.pdf) section 2.7
 
 ::: {#def-probability-measure}
+
 ## Probability Measure
 
-if $\Omega$ is a *sample space* (@def-sample-space) and $\mathcal{F}$ a $\sigma$-algebra (@def-sigma-algebra) for $\Omega$ then a function $P: \mathcal{f} \to [0,1]$ with the following properties 1. $$P(\Omega)=1$$ 2. countable additive for pairwise disjoint countable collections of events: is called a probability measure over $\mathcal{F}$. $$ \forall E_{ i \in \mathbb{N} } \quad   P(\bigcup_{n\in \mathbb{N} }{E_n})=\sum_{n\in \mathbb{N} } P(E_n)$$ {#eq-p-measure-addativity} then $P$ is a **probability measure** over $\mathcal{F}$
+if $\Omega$ is a *sample space* (@def-sample-space) and $\mathcal{F}$ a $\sigma$-algebra (@def-sigma-algebra) for $\Omega$ then a function $P: \mathcal{f} \to [0,1]$ with the following properties:
+
+1. Total measure of the sample space is 1:
+    $$
+        P(\Omega)=1
+    $$ {#eq-p-measure-axiom1}
+2.  countably additive for pairwise disjoint countable collections of events: is called a probability measure over $\mathcal{F}$. 
+    $$ 
+    \forall E_{ i \in \mathbb{N} } \quad   P(\bigcup_{n\in \mathbb{N} }{E_n})=\sum_{n\in \mathbb{N} } P(E_n)
+    $$ {#eq-p-measure-addativity} 
+
+    then $P$ is a **probability measure** over $\mathcal{F}$
 :::
+
 
 ::: {#def-probability-space}
 ## Probability Space
 
-If $\Omega$ is a *sample space* (@def-sample-space) and $\mathcal{F}$ a $\sigma$-algebra (@def-sigma-algebra) for $\Omega$, and $P$ a *probability measure* (@def-probability-measure) for $\mathcal{F}$ then the ordered set $<\Omega,\mathcal{F},P >$is called a **probability space**
+If $\Omega$ is a *sample space* [@def-sample-space] and $\mathcal{F}$ a $\sigma$-algebra [@def-sigma-algebra] for $\Omega$, and $P$ a *probability measure* (@def-probability-measure) for $\mathcal{F}$ then the ordered set $<\Omega,\mathcal{F},P >$ is called a **probability space**
 :::
+
 
 ![Illustration of a probability space by Ziggystar](images/Probability-measure.svg.png){.column-margin}
 
-::: callout-tip
-### notation
+::: {.callout-tip}
+### Notation
 
 sometimes $\mathcal{F}$ is replaced with $\Sigma$. for the $\sigma$-algebra like in the figure below
 :::
@@ -114,44 +164,71 @@ sometimes $\mathcal{F}$ is replaced with $\Sigma$. for the $\sigma$-algebra like
 
 The probability of the *null event* is 0.
 
-$$ P(\emptyset) = 0 $$ {#eq-axiom-p1} Probabilities of all possible events (the space of all possible outcomes) must sum to one.
+$$
+P(\emptyset) = 0 
+$$ {#eq-axiom-p1} 
 
-$$ P(\Omega) = 1 $$ {#eq-axiom-p2} $$A\cap B = \emptyset \implies P(A \cup B) = P(A)+P(B) $$ {#eq-axiom-p3}
+Probabilities of all possible events (the space of all possible outcomes) must sum to one.
+
+$$ 
+P(\Omega) = 1 
+$$ {#eq-axiom-p2} 
+
+$$
+A\cap B = \emptyset \implies P(A \cup B) = P(A)+P(B) 
+$$ {#eq-axiom-p3}
 
 ::: {#trm-complements}
-$$P(A^c) =1-P(A) \qquad \forall A\in\Omega $$ {#eq-complements}
+$$
+P(A^c) =1-P(A) \qquad \forall A\in\Omega 
+$$ {#eq-complements}
 :::
 
-if A is an event in \Omega then $A^C$ is in Omega and since they are mutually exclusive by @eq-axiom-p2
+if A is an event in \Omega then $A^C$ is in Omega and since they are mutually exclusive by [@eq-axiom-p2]
 
 If S is the certain event in class C
 
 For every event $X$ in class $\Omega$
 
-$$1 \ge P(X) \ge 0 \qquad \forall X\in \Omega \tag{probability axiom 1}$$
+$$
+1 \ge P(X) \ge 0 \qquad \forall X \in \Omega \qquad \text{(P1)} \qquad
+$$ {#eq-probability-axiom-1}
 
-Probabilities add to one
+Probabilities add to one:
 
-$$\sum_{i\in \Omega} P(X=i)=1 \tag{probability axiom 2}$$ The complement of an event $A$ is $A^c$\
+$$
+\sum_{i\in \Omega} P(X=i)=1 \qquad \text{(P2)}\qquad
+$$ {#eq-probability-axiom-2}
 
-$$ P(S) = 1 $$ {#eq-probability-axiom-3}
+The complement of an event $A$ is $A^c$
+
+$$
+ P(S) = 1 
+$$ {#eq-probability-axiom-3}
 
 If events $A_\lambda$ are mutually exclusive (only one event may happen):
 
-$$P(A_1 \cup A_2) = P(A_1) + P(A_2) - P(A_1\cap A_1)$$ {#eq-probability-union-finite}
+$$
+P(A_1 \cup A_2) = P(A_1) + P(A_2) - P(A_1\cap A_1)
+$$ {#eq-probability-union-finite}
 
-$$P(\bigcup_{\lambda\in \Omega} A_\lambda)=\sum_{\lambda \in \Omega} P(A_\lambda)$$ {#eq-probability-union}
 
-if ${B_i}$ is a finite or countably infinite partition of a sample space then
+$$
+P(\bigcup_{\lambda\in \Omega} A_\lambda)=\sum_{\lambda \in \Omega} P(A_\lambda)
+$$ {#eq-probability-union}
 
-$$P(A) = {\sum_{i=1}^{N} P(A \cup B_i)}= {\sum_{i=1}^{N} P(A|B_i)P(B_i)}$$ {#eq-law-of-total-probability}
+if ${B_i}$ is a finite or countably *infinite partition* of a sample space $$ then
+
+$$
+P(A) = {\sum_{i=1}^{N} P(A \cup B_i)}= {\sum_{i=1}^{N} P(A|B_i)P(B_i)}
+$$ {#eq-law-of-total-probability}
 
 ### Odds {#sec-odds}
 
 > C-3PO: Sir, the possibility of successfully navigating an asteroid field is approximately 3,720 to 1! <br>
 > Han Solo: Never tell me the odds! --- Star Wars Episode V: The Empire Strikes Back
 
-Another way to think about probabilities is using `odds` (@eq-odds). Odds are more intuitive when we are thinking about the risk of an event happening or not happening. and when we consider the risk associated with uncertainty odds are a handy way of considering the risks.
+Another way to think about probabilities is using *odds* [@eq-odds]. Odds are more intuitive when we are thinking about the risk of an event happening or not happening. and when we consider the risk associated with uncertainty odds are a handy way of considering the risks.
 
 ::: {#def-odds}
 #### Odds Definitions
@@ -163,7 +240,7 @@ $$
 $$ {#eq-odds}
 :::
 
-It is also possible to convert odds to probabilities (@eq-probability-from-odds)
+It is also possible to convert odds to probabilities [@eq-probability-from-odds]
 
 ::: {#thm-probability-from-odds}
 #### Probability from odds
@@ -173,7 +250,8 @@ p(A) = \frac{ \mathcal{O}(A)} {1+ \mathcal{O}(A)}
 $$ {#eq-probability-from-odds}
 :::
 
-::: proof
+::: {.proof}
+
 $$
 \begin{aligned}
 & & \mathcal{O}(A)  &= \frac{P(A)}{1-P(A)} && \text{(odds definition)} 
@@ -188,17 +266,18 @@ $$
 
 If we are at the races and thinking about each horse a horse what we may care about is if it will win or lose. In such a case the odds can summarize the ratio of past successes and failures to win. Odds seem to be in line with a frequentist view summarizing ratios of success to failure. In reality, the other horses have odds as well and we may want to consider the probability of winning given the other horses in the race, and perhaps other parameters, like the track type, length of the race, jockey, and perhaps some hot tips. So let us not get ahead of ourselves
 
-::: callout-tip
+::: {.callout-tip}
 ### Data Scientist - insights.
 
 Many of these formulas are rather tedious. But, once you start to work on a data science project you will often discover that there are some problems with the data and because of that you cannot use your favorite algorithm. Or worse when you do the results are not very useful. It is at this point that the ability to think back to first principles will be very fruitful. The more of this material you can recall, the more the dots will connect, and your ability will translate into models of increasing sophistication. Luckily, the rules of probability are *logical*. So it is fairly easy to remember or even derive if you take some time to understand them.
 
 I realize that figuring out which results are more useful is easier in hindsight. And one of the reasons I am taking these courses is to annotate in my note the results I think to be most useful.
+
 :::
 
 ### Expectation {#sec-expectation}
 
-The `expectation` of a random variable (RV) X is the **weighted average** of the outcomes it can take weighted by their probabilities.
+The *expectation* of a random variable (RV) X is the **weighted average** of the outcomes it can take weighted by their probabilities.
 
 ::: {#def-expectation-discrete}
 
@@ -222,7 +301,7 @@ $$ {#eq-expectation-continuous}
 
 ![Probability Paradigms](images/c1l01-ss-01-paradigms.png){.column-margin}
 
-We start by looking at probability as defined or interpreted under three paradigms. Probability is at its root a logical and scientific approach to formalizing and modeling `uncertainty`.
+We start by looking at probability as defined or interpreted under three paradigms. Probability is at its root a logical and scientific approach to formalizing and modeling *uncertainty*.
 
 The three paradigms are:
 
@@ -232,12 +311,14 @@ The three paradigms are:
 Deals primarily with cases where probabilities are distributed equally, like with dice and cards.
 :::
 
-::: callout-tip
+![Abraham De Moivre](images/bio-abraham-de-moivre-booked.png){.column-margin width="200px"}
+
+::: {.callout-tip collapse="true"}
 ### Biographical note on Abraham de Moivre
 
 > The Probability of an Event is greater or less, according to the number of chances by which it may happen, compared with the whole number of chances by which it may either happen or fail. [@deMoivre1718doctrine]
 
-![Abraham De Moivre](images/bio-abraham-de-moivre-booked.png){.column-margin} Abraham de Moivre (1667-1754) was a prominent French mathematician known for his significant contributions to the field of probability and his work on the foundations of Bayesian statistics. His research and writings played a crucial role in establishing the mathematical principles of probability theory and laid the groundwork for future advancements in the field.
+Abraham de Moivre (1667-1754) was a prominent French mathematician known for his significant contributions to the field of probability and his work on the foundations of Bayesian statistics. His research and writings played a crucial role in establishing the mathematical principles of probability theory and laid the groundwork for future advancements in the field.
 
 De Moivre is best known for his work on the theory of probability. He made significant advancements in understanding the *Binomial distribution* and its application to games of chance and coin tossing. In his influential book, "The Doctrine of Chances" (1718), he presented a comprehensive treatise on probability theory, providing mathematical explanations for various phenomena such as the law of large numbers and the central limit theorem. His book became a standard reference in the field and greatly influenced subsequent research on probability.
 
@@ -245,7 +326,9 @@ Furthermore, de Moivre's work laid the foundation for Bayesian statistics, altho
 
 > And thus in all cases it will be found, that although Chance produces irregularities, still the Odds will be infinitely great, that in process of Time, those Irregularities will bear no proportion to the recurrency of that Order which naturally results from Original Design. [@deMoivre1718doctrine]
 
-He was an active participant in scientific societies and maintained correspondence with renowned mathematicians of his time, including Isaac Newton and James Stirling. His work played a crucial role in disseminating mathematical knowledge and promoting the study of probability theory across Europe. De Moivre's research and writings laid the groundwork for the development of probability theory and Bayesian statistics. His ideas and formulas continue to be foundational in the field, and his contributions have had a lasting impact on mathematics, statistics, and the broader scientific community. His work remains an essential reference for researchers and serves as a testament to his profound understanding of probability and statistics.
+He was an active participant in scientific societies and maintained correspondence with renowned mathematicians of his time, including Isaac Newton and James Stirling. His work played a crucial role in disseminating mathematical knowledge and promoting the study of probability theory across Europe. De Moivre's research and writings laid the groundwork for the development of probability theory and Bayesian statistics. His ideas and formulas continue to be foundational in the field, and his contributions have had a lasting impact on mathematics, statistics, and the broader scientific community. 
+
+His work remains an essential reference for researchers and serves as a testament to his profound understanding of probability and statistics.
 
 > Further, the same Arguments which explode the Notion of Luck, may, on the other side, be useful in some cases to establish a due comparison between Chance and Design: We may imagine Chance and Design to be, as it were, in Competition with each other, for the production of some sorts of Events, and many calculate what Probability there is, that those Events should be rather be owing to the one than to the other. [@deMoivre1718doctrine]
 :::
@@ -269,6 +352,11 @@ Defines probability starting with a subjective view of the problem called a prio
 
 The lesson and assignments test these views with examples - but the division is rather artificial to me. Not that it does not exist, but rather different authors on the subject treat it differently.
 
+
+::: {.content-hidden when-format="pdf"}
+{{< video https://youtu.be/cgclGi8yEu4 title="Interview with Dennis Lindley" >}}
+:::
+
 ## Bayesian Probability and Coherence {#sec-bayesian-probability-and-coherence}
 
 ![coherence](images/c1l01-ss-02-coherence.png){.column-margin}
@@ -278,11 +366,11 @@ A notion of a **fair bet** - one which we would take either way for the same rew
 -   **coherence** following the rules of statistics
 -   **incoherence** or **Dutch book** one would be guaranteed to lose money.
  
- <br>
+<br>
  
-![Bruno de Finetti](images/bio-Bruno-de-Finetti.jpg){.column-margin}
+![Bruno de Finetti](images/bio-Bruno-de-Finetti.jpg){.column-margin width="200px"}
 
-::: callout-tip
+::: {.callout-tip  collapse="true"}
 ### Biographical note on Bruno de Finetti
 
 > From the subjective standpoint, no assertion is possible without a priori opinion, but the variety of possible opinions makes problems depending on different opinions interesting.
@@ -311,42 +399,45 @@ Another milestone result by de Finetti is his theorem
 :::
 
 
-::: callout-note
+::: {.callout-note}
 
 ## Question
 
 Representing uncertainty with probability: Don't use any outside information on this question, just determine probabilities subjectively. The country of Chile is divided into 15 administrative regions. The size of the country is 756,096 square kilometers. How big do you think the region of Atacama is? Let:
 
--   A1 be the event: Atacama is less than 10,000 $km^2$.
--   A2 be the event: Atacama is between 10,000 and 50,000 $km^2$
--   A3 be the event: Atacama is between 50,000 and 100,000 $km^2$
--   A4 be the event: Atacama is more than 100,000 $km^2$ Assign probabilities to A1...A4
+-   $A_1$ be the event: Atacama is less than 10,000 $km^2$.
+-   $A_2$ be the event: Atacama is between 10,000 and 50,000 $km^2$
+-   $A_3$ be the event: Atacama is between 50,000 and 100,000 $km^2$
+-   $A_4$ be the event: Atacama is more than 100,000 $km^2$ Assign probabilities to $A_1 \ldots A_4$
 
-::: column-margin
+:::: {.column-margin}
 | Event | Min $km^2$ | Max $km^2$ | P             |
 |-------|------------|------------|---------------|
-| A1    | 0          | 10K        | $\frac{1}{4}$ |
-| A2    | 10k        | 50K        | $\frac{1}{4}$ |
-| A3    | 50k        | 100K       | $\frac{1}{4}$ |
-| A4    | 100k       |            | $\frac{1}{4}$ |
-:::
+| $A_1$    | 0          | 10K        | $\frac{1}{4}$ |
+| $A_2$    | 10k        | 50K        | $\frac{1}{4}$ |
+| $A_3$    | 50k        | 100K       | $\frac{1}{4}$ |
+| $A_4$    | 100k       |            | $\frac{1}{4}$ |
+::::
+
 :::
 
 w at this point? - The expected area for the region is $\frac{750,000}{15}=50,000 km^2$. - What Do I believe? - I believe that the administrative regions have significantly different sizes - from my familiarity with some other countries. - As I don't know if Atacama is large or small my best *bet* is to assign equal probabilities to each event.
 
-::: callout-note
+::: {.callout-note}
+
 ## More information 1
 
 Atacama is the fourth largest of 15 regions. Using this information, I revised my probabilities as follows:
 
-::: column-margin
+:::: {.column-margin}
 | Event | Min $km^2$ | Max $km^2$ | P              |
 |-------|------------|------------|----------------|
-| A1    |            | 10K        | $\frac{1}{16}$ |
-| A2    | 10k        | 50K        | $\frac{3}{16}$ |
-| A3    | 50k        | 100K       | $\frac{6}{16}$ |
-| A4    | 100k       |            | $\frac{6}{16}$ |
-:::
+| $A_1$    |            | 10K        | $\frac{1}{16}$ |
+| $A_2$    | 10k        | 50K        | $\frac{3}{16}$ |
+| $A_3$    | 50k        | 100K       | $\frac{6}{16}$ |
+| $A_4$    | 100k       |            | $\frac{6}{16}$ |
+::::
+
 :::
 
 -   What do I know?
@@ -362,19 +453,20 @@ Atacama is the fourth largest of 15 regions. Using this information, I revised m
     -   A1 seems extremely unlikely as it necessitates the top three regions account for almost all of the area of the country. $\frac{750,000 - 14 * 10,000}{3} = 203,333.3$ that's about 4 times the average for each state.
     -   A2 is fairly unlikely to require the to p three regions to account for $\frac{(750,000-14*20000)}{3}=170,000$ each that's more than 3 times the average.
 
-::: callout-note
+::: {.callout-note}
 ## More information 2
 
 The smallest region is the capital region, Santiago Metropolitan, which has an area of 15,403 $km^2$. Using this information, I revised my probabilities as follows:
 
-::: column-margin
+:::: {.column-margin}
 | Event | Min $km^2$ | Max $km^2$ | P             |
 |-------|------------|------------|---------------|
-| A1    |            | 10K        | $0$           |
-| A2    | 10k        | 50K        | $\frac{1}{8}$ |
-| A3    | 50k        | 100K       | $\frac{4}{8}$ |
-| A4    | 100k       |            | $\frac{3}{8}$ |
-:::
+| $A_1$    |            | 10K        | $0$           |
+| $A_2$    | 10k        | 50K        | $\frac{1}{8}$ |
+| $A_3$    | 50k        | 100K       | $\frac{4}{8}$ |
+| $A_4$    | 100k       |            | $\frac{3}{8}$ |
+::::
+
 :::
 
 What do I know?
@@ -388,41 +480,42 @@ What do I know?
     -   Also I know that 11 regions are smaller than Atacama and that 3 three are larger.
     -   None of the events can yet be ruled out. But A1 and A2 are now very unlikely as they would require the top three regions to account for almost all of the area of the country.
 
-::: callout-note
+::: {.callout-note}
 ## More information 3
 
 The third largest region is Aysén del General Carlos Ibáñez del Campo, which has an area of 108,494 $km^2$.
 
 Using this information, I revised my probabilities as follows:
 
-::: column-margin
-| Event | Min $km^2$ | Max $km^2$ | P             |
-|-------|------------|------------|---------------|
-| A1    |            | 10K        | $0$           |
-| A2    | 10k        | 50K        | $\frac{1}{8}$ |
-| A3    | 50k        | 100K       | $\frac{6}{8}$ |
-| A4    | 100k       |            | $\frac{1}{8}$ |
-:::
+:::: {.column-margin}
+| Event   | Min $km^2$ | Max $km^2$ | P             |
+|---------|------------|------------|---------------|
+| $A_1$    |            | 10K        | $0$           |
+| $A_2$    | 10k        | 50K        | $\frac{1}{8}$ |
+| $A_3$    | 50k        | 100K       | $\frac{6}{8}$ |
+| $A_4$    | 100k       |            | $\frac{1}{8}$ |
+::::
+
 :::
 
 -   The expected area is $\frac{750,000}{15}=50,000 \quad km^2$
 -   $P(A1)=0$ since the smallest region is \$15,403 km\^2 \$.
 -   I believe that the administrative regions have significantly different sizes - from my familiarity with some other countries.
 -   I know that Atacama is the Fourth largest.
-    -   If the region sizes are equally sized I should gamble mostly on A2 and A3.
+    -   If the region sizes are equally sized I should gamble mostly on $A_2$ and $A_3$.
     -   But I think there are a few large regions and many smaller ones.
     -   Also I know that 11 regions are smaller than Atacama and that 3 three are larger.
     -   None of the events can yet be ruled out. But A1 and A2 are now very unlikely as they would require the top three regions to account for almost all of the area of the country.
 
 ## Discussions: Objectivity {#sec-discussions-objectivity}
 
-::: callout-tip
+::: {.callout-tip}
 ## Discussion: Objectivity
 
 In what ways could the frequentist paradigm be considered objective? In what ways could the Bayesian paradigm be considered objective? Identify ways in which each paradigm might be considered subjective.
 
 -   Frequentist:
-    -   The orthodox approach is statisticians should establish an objective statistical methodology and field researchers should then use it to solve their problems. This leads to following flow charts for analysis and tests without fully understanding the model and how it works. At best one makes mistakes due to misunderstanding. But we can see that there is a systematic gaming of this methodology using `p-hacking`, `multiple hypotheses`, and `hiding failed experiments` leading to the publication of outrageously good results, which then cannot be replicated.
+    -   The orthodox approach is statisticians should establish an objective statistical methodology and field researchers should then use it to solve their problems. This leads to following flow charts for analysis and tests without fully understanding the model and how it works. At best one makes mistakes due to misunderstanding. But we can see that there is a systematic gaming of this methodology using *p-hacking*, *multiple hypotheses*, and *hiding failed experiments* leading to the publication of outrageously good results, which then cannot be replicated.
     -   The analysis is done on data that is supposedly sampled from a population. But the same data may belong to different populations (the city, the country, etc) each with different statistics. We should assume the same long-run frequencies would converge to different to each one of these statistics if we repeat the experiment enough times.
     -   The sample size, or how long we run the experiment is a tricky decision to make in advance and without prior knowledge. And if we do not decide in advance, but periodically as the data comes in. It turns out that this can completely change the outcomes of the experiment - even if both approaches have the same data.
     -   The choice of $H_0$ and $H_1$ is often subjective and each hypothesis can lead to yet another.
@@ -436,11 +529,11 @@ In what ways could the frequentist paradigm be considered objective? In what way
 
 ## Expected values {#sec-expected-values}
 
-The `expectation` of an RV is a measure of its central tendency.
+The *expectation* of an RV is a measure of its central tendency.
 
-The expected value, also known as the expectation or mean, of a random variable $X$ is denoted $\mathbb{E}[X]$. It is the `weighted average` of all values $X$ could take, weighted by their probabilities.
+The expected value, also known as the expectation or mean, of a random variable $X$ is denoted $\mathbb{E}[X]$. It is the *weighted average* of all values $X$ could take, weighted by their probabilities.
 
-::: callout-tip
+::: {.callout-tip}
 [**Why Square Brackets for Expectation**]{.column-margin}
 
 I looked this up and found the following answer, see @mo-1302543.
@@ -450,7 +543,7 @@ The RV X is a function whereas the Expectation is a Functional (a mapping from a
 See @enwiki-functional for more information on what a Functional is.
 :::
 
-### Expectation of a discrete RV
+### Expectation of a discrete random variable
 
 If $X$ is a discrete-valued random variable then its expectation is defined by(@eq-expectation-discrete)
 
@@ -458,7 +551,7 @@ $$
 \mathbb{E}[X]=\sum^N_{i=1} x_i \cdot P(X=x_i) = \sum^N_{i=1} x_i \cdot f(x) 
 $$
 
-### Expectation of a continuous RV
+### Expectation of a continuous random variable
 
 If $X$ is a continuous random variable then its expectation is defined by(@eq-expectation-continuous)
 
@@ -466,7 +559,7 @@ $$
 \mathbb{E}[X]=\int_{-\infty}^{\infty} x \cdot f(x) dx
 $$
 
-while the `mean` is an important descriptive statistic for central tendencies, we often prefer the `median` which is robust to outliers, and pick the `mode` as a representative if we need a value in the data set.
+while the *mean* is an important descriptive statistic for central tendencies, we often prefer the *median* which is robust to outliers, and pick the *mode* as a representative if we need a value in the data set.
 
 ### Properties of Expectation
 
@@ -492,7 +585,7 @@ $$
 
 ## Variance {#sec-variance}
 
-`Variance` is the dispersion of a distribution about the mean.
+*Variance* is the dispersion of a distribution about the mean.
 
 ::: {#def-variance-discrete}
 For a discrete random variable, the Variance is defined using (@eq-variance-discrete)
