--- a/C1-L01.qmd
+++ b/C1-L01.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Probability"
 subject: "Bayesian Statistics: From Concept to Data Analysis"
+description: "Outline of probability"
 categories:
   - Bayesian Statistics
   - MonteCarlo Estimation
@@ -130,7 +131,7 @@ some properties of $\sigma$-algebra
 
 ## Probability Measure
 
-if $\Omega$ is a *sample space* (@def-sample-space) and $\mathcal{F}$ a $\sigma$-algebra (@def-sigma-algebra) for $\Omega$ then a function $P: \mathcal{f} \to [0,1]$ with the following properties:
+if $\Omega$ is a *sample space* [@def-sample-space] and $\mathcal{F}$ a $\sigma$-algebra [@def-sigma-algebra] for $\Omega$ then a function $P: \mathcal{f} \to [0,1]$ with the following properties:
 
 1. Total measure of the sample space is 1:
     $$
@@ -220,7 +221,7 @@ $$ {#eq-probability-union}
 if ${B_i}$ is a finite or countably *infinite partition* of a sample space $$ then
 
 $$
-P(A) = {\sum_{i=1}^{N} P(A \cup B_i)}= {\sum_{i=1}^{N} P(A|B_i)P(B_i)}
+P(A) = {\sum_{i=1}^{N} P(A \cap B_i)}= {\sum_{i=1}^{N} P(A|B_i)P(B_i)}
 $$ {#eq-law-of-total-probability}
 
 ### Odds {#sec-odds}
@@ -295,6 +296,7 @@ $$ {#eq-expectation-discrete}
 $$
 \mathbb{E}(x) = \int_{\Omega} x P(X=x) dx
 $$ {#eq-expectation-continuous}
+
 :::
 
 ## Probability Paradigms {#sec-probability-paradigms}
@@ -399,11 +401,11 @@ Another milestone result by de Finetti is his theorem
 :::
 
 
-::: {.callout-note}
+::: {.callout-note collapse="true"}
 
 ## Question
 
-Representing uncertainty with probability: Don't use any outside information on this question, just determine probabilities subjectively. The country of Chile is divided into 15 administrative regions. The size of the country is 756,096 square kilometers. How big do you think the region of Atacama is? Let:
+Representing uncertainty with probability: [Don't use any outside information on this question, just determine probabilities *subjectively*]{.mark}. The country of Chile is divided into 15 administrative regions. The size of the country is 756,096 square kilometers. How big do you think the region of Atacama is? Let:
 
 -   $A_1$ be the event: Atacama is less than 10,000 $km^2$.
 -   $A_2$ be the event: Atacama is between 10,000 and 50,000 $km^2$
@@ -411,17 +413,24 @@ Representing uncertainty with probability: Don't use any outside information on 
 -   $A_4$ be the event: Atacama is more than 100,000 $km^2$ Assign probabilities to $A_1 \ldots A_4$
 
 :::: {.column-margin}
+
 | Event | Min $km^2$ | Max $km^2$ | P             |
 |-------|------------|------------|---------------|
-| $A_1$    | 0          | 10K        | $\frac{1}{4}$ |
-| $A_2$    | 10k        | 50K        | $\frac{1}{4}$ |
-| $A_3$    | 50k        | 100K       | $\frac{1}{4}$ |
-| $A_4$    | 100k       |            | $\frac{1}{4}$ |
+| $A_1$    | 0       | 10k        | $\frac{1}{4}$ |
+| $A_2$    | 10k     | 50k        | $\frac{1}{4}$ |
+| $A_3$    | 50k     | 100k       | $\frac{1}{4}$ |
+| $A_4$    | 100k    |            | $\frac{1}{4}$ |
+
 ::::
 
 :::
 
-w at this point? - The expected area for the region is $\frac{750,000}{15}=50,000 km^2$. - What Do I believe? - I believe that the administrative regions have significantly different sizes - from my familiarity with some other countries. - As I don't know if Atacama is large or small my best *bet* is to assign equal probabilities to each event.
+-   What do I know at this point? 
+    - The expected area for the region is $\frac{750,000}{15}=50,000\ km^2$ . 
+- What Do I believe? 
+    - I believe that the administrative regions have significantly different sizes 
+    - from my familiarity with some other countries. 
+    - As I don't know if Atacama is large or small my best *bet* is to assign equal probabilities to each event.
 
 ::: {.callout-note}
 
@@ -430,28 +439,28 @@ w at this point? - The expected area for the region is $\frac{750,000}{15}=50,00
 Atacama is the fourth largest of 15 regions. Using this information, I revised my probabilities as follows:
 
 :::: {.column-margin}
-| Event | Min $km^2$ | Max $km^2$ | P              |
-|-------|------------|------------|----------------|
-| $A_1$    |            | 10K        | $\frac{1}{16}$ |
-| $A_2$    | 10k        | 50K        | $\frac{3}{16}$ |
-| $A_3$    | 50k        | 100K       | $\frac{6}{16}$ |
+| Event    | Min $km^2$ | Max $km^2$ | P              |
+|----------|------------|------------|----------------|
+| $A_1$    |            | 10k        | $\frac{1}{16}$ |
+| $A_2$    | 10k        | 50k        | $\frac{3}{16}$ |
+| $A_3$    | 50k        | 100k       | $\frac{6}{16}$ |
 | $A_4$    | 100k       |            | $\frac{6}{16}$ |
 ::::
 
 :::
 
 -   What do I know?
-    -   The expected area is $\frac{750,000}{15}=50,000 km^2$.
+    -   The expected area is $\frac{750,000}{15}=50,000\ km^2$ .
     -   I know that Atacama is the Fourth largest.
 -   What Do I believe?
     -   I believe that the administrative regions have significantly different sizes - from my familiarity with some other countries.
 -   How do I revise my guesstimate?
-    -   If the region sizes are equally sized I should gamble mostly on A2 and A3.
+    -   If the region sizes are equally sized I should gamble mostly on $A_2$ and $A_3$ .
     -   But I think there are a few large regions and many smaller ones.
     -   Also I know that 11 regions are smaller than Atacama and that 3 three are larger.
     -   None of the events can yet be ruled out.
-    -   A1 seems extremely unlikely as it necessitates the top three regions account for almost all of the area of the country. $\frac{750,000 - 14 * 10,000}{3} = 203,333.3$ that's about 4 times the average for each state.
-    -   A2 is fairly unlikely to require the to p three regions to account for $\frac{(750,000-14*20000)}{3}=170,000$ each that's more than 3 times the average.
+    -   $A_1$ seems extremely unlikely as it necessitates the top three regions account for almost all of the area of the country. $\frac{750,000 - 14 * 10,000}{3} = 203,333.3$ that's about 4 times the average for each state.
+    -   $A_2$ is fairly unlikely to require the top three regions to account for $\frac{(750,000-14*20000)}{3}=170,000$ each that's more than 3 times the average.
 
 ::: {.callout-note}
 ## More information 2
@@ -459,11 +468,11 @@ Atacama is the fourth largest of 15 regions. Using this information, I revised m
 The smallest region is the capital region, Santiago Metropolitan, which has an area of 15,403 $km^2$. Using this information, I revised my probabilities as follows:
 
 :::: {.column-margin}
-| Event | Min $km^2$ | Max $km^2$ | P             |
-|-------|------------|------------|---------------|
-| $A_1$    |            | 10K        | $0$           |
-| $A_2$    | 10k        | 50K        | $\frac{1}{8}$ |
-| $A_3$    | 50k        | 100K       | $\frac{4}{8}$ |
+| Event    | Min $km^2$ | Max $km^2$ | P             |
+|----------|------------|------------|---------------|
+| $A_1$    |            | 10k        | $0$           |
+| $A_2$    | 10k        | 50k        | $\frac{1}{8}$ |
+| $A_3$    | 50k        | 100k       | $\frac{4}{8}$ |
 | $A_4$    | 100k       |            | $\frac{3}{8}$ |
 ::::
 
@@ -472,10 +481,10 @@ The smallest region is the capital region, Santiago Metropolitan, which has an a
 What do I know?
 
 -   The expected area is $\frac{750,000}{15}=50,000 \quad km^2$
--   $P(A1)=0$ since the smallest region is \$ 15,403 km\^2 \$.
+-   $P(A_1)=0$ since the smallest region is $ 15,403 km^2$.
 -   I believe that the administrative regions have significantly different sizes - from my familiarity with some other countries.
 -   I know that Atacama is the Fourth largest.
-    -   If the region sizes are equally sized I should gamble mostly on A2 and A3.
+    -   If the region sizes are equally sized I should gamble mostly on $A_2$ and $A_3$.
     -   But I think there are a few large regions and many smaller ones.
     -   Also I know that 11 regions are smaller than Atacama and that 3 three are larger.
     -   None of the events can yet be ruled out. But A1 and A2 are now very unlikely as they would require the top three regions to account for almost all of the area of the country.
@@ -488,8 +497,8 @@ The third largest region is Aysén del General Carlos Ibáñez del Campo, which 
 Using this information, I revised my probabilities as follows:
 
 :::: {.column-margin}
-| Event   | Min $km^2$ | Max $km^2$ | P             |
-|---------|------------|------------|---------------|
+| Event    | Min $km^2$ | Max $km^2$ | P             |
+|----------|------------|------------|---------------|
 | $A_1$    |            | 10K        | $0$           |
 | $A_2$    | 10k        | 50K        | $\frac{1}{8}$ |
 | $A_3$    | 50k        | 100K       | $\frac{6}{8}$ |
@@ -499,10 +508,10 @@ Using this information, I revised my probabilities as follows:
 :::
 
 -   The expected area is $\frac{750,000}{15}=50,000 \quad km^2$
--   $P(A1)=0$ since the smallest region is \$15,403 km\^2 \$.
+-   $P(A1)=0$ since the smallest region is \$15,403 km\^2 \$ .
 -   I believe that the administrative regions have significantly different sizes - from my familiarity with some other countries.
 -   I know that Atacama is the Fourth largest.
-    -   If the region sizes are equally sized I should gamble mostly on $A_2$ and $A_3$.
+    -   If the region sizes are equally sized I should gamble mostly on $A_2$ and $A_3$ .
     -   But I think there are a few large regions and many smaller ones.
     -   Also I know that 11 regions are smaller than Atacama and that 3 three are larger.
     -   None of the events can yet be ruled out. But A1 and A2 are now very unlikely as they would require the top three regions to account for almost all of the area of the country.
@@ -593,14 +602,16 @@ For a discrete random variable, the Variance is defined using (@eq-variance-disc
 $$
 \mathbb{V}ar(X)=\sum^N_{i=1} (x_i-\mu)^2 P(X=x_i)
 $$ {#eq-variance-discrete}
+
 :::
 
 ::: {#def-variance-continuous}
 For a continuous random variable, the Variance is defined using (@eq-variance-continuous)
 
 $$
-\mathbb{V}ar[X]=\int_{-\infty}^{\infty} (x_i-\mu)^2 f(x)dx
+\mathbb{V}ar[X]=\int_{- \infty}^{\infty} (x-\mu)^2 f(x)dx
 $$ {#eq-variance-continuous}
+
 :::
 
 ### Properties of Variance
@@ -609,28 +620,48 @@ $$
 \mathbb{V}ar[c] = 0
 $$ {#eq-variance-of-constant}
 
+if $X$ and $Y$ are independent then
+
 $$
 \mathbb{V}ar[aX+by] = a^2\mathbb{V}ar[X] +b^2\mathbb{V}ar[Y]
 $$ {#eq-variance-is-linear}
+
+otherwise
+
+$$
+\mathbb{V}ar[aX+by] = a^2\mathbb{V}ar[X] +b^2\mathbb{V}ar[Y] + 2ab\mathbb{C}ov(X,Y)
+$$ {#eq-variance-is-linear-covariance}
+
+where $\mathbb{C}ov(X,Y)$ is the covariance of $X$ and $Y$.
 
 Here is one of the most useful identities (@eq-variance-expectation) for wrangling with variance using the expectation of $X$ and $X^2$.
 
 $$
 \begin{aligned}
-\mathbb{V}ar[X] &=\mathbb{E}[(X-\mathbb{E}[X])^2] \\&= \mathbb{E}[X^2] − (\mathbb{E}[X])^2
+    \mathbb{V}ar[X] &= \mathbb{E}[(X- \mathbb{E}[X])^2] 
+    \\&= \mathbb{E}[X^2] − (\mathbb{E}[X])^2
 \end{aligned}
 $$ {#eq-variance-expectation}
 
 ## Covariance {#sec-covariance}
 
+Covariance is a measure of the joint variability of two random variables. It indicates the direction of the linear relationship between the variables.
+
+If $X$ and $Y$ are two random variables, the covariance of $X$ and $Y$ is defined as:
+
 $$
 \begin{aligned}
-\mathbb{C}ov[X,Y] &= \mathbb{E}[(X-\mathbb{E}[X])(Y-\mathbb{E}[Y])] \\&= \mathbb{E}_{X,Y}[XY]-\mathbb{E}_X[X]\mathbb{E}_Y[Y]
+\mathrm{Cov}(X,Y) &= \mathbb{E}[(X-\mathbb{E}[X])(Y-\mathbb{E}[Y])] 
+\\ &= \mathbb{E}[XY]-\mathbb{E}[X]\mathbb{E}[Y]
 \end{aligned}
 $$ {#eq-covariance}
 
 ## Correlation {#sec-correlation}
 
+Correlation is a standardized measure of the linear relationship between two random variables. It is a dimensionless quantity that ranges from -1 to 1.
+
+The correlation coefficient $\rho_{XY}$ is defined as the covariance of $X$ and $Y$ divided by the product of their standard deviations:
+
 $$
-\rho_{XY} = \frac{\mathbb{C}ov(X,Y)}{\sigma_X\sigma_Y}
+\rho_{XY} = \frac{\mathrm{Cov}(X,Y)}{\sigma_X\sigma_Y}
 $$ {#eq-correlation}
