--- a/C1-L01.qmd
+++ b/C1-L01.qmd
@@ -1,10 +1,10 @@
 ---
 title: "Probability"
-subject: "Bayesian Statistics: From Concept to Data Analysis"
+subtitle: "Bayesian Statistics: From Concept to Data Analysis"
+subject: "Bayesian Statistics"
 description: "Outline of probability"
 categories:
   - Bayesian Statistics
-  - MonteCarlo Estimation
 keywords:
   - Odds
   - Probability
