--- a/C1-L02.qmd
+++ b/C1-L02.qmd
@@ -1,3 +1,16 @@
+---
+title: "Bayes' Theorem"
+subtitle: "Bayesian Statistics: From Concept to Data Analysis"
+subject: "Bayesian Statistics"
+description: "Outline of probability"
+categories:
+  - Bayesian Statistics
+keywords:  
+  - Conditional Probability
+  - Bayes' theorem
+
+---
+
 # Bayes' Theorem {#sec-bayes-theorem}
 
 ```{python}
