--- a/C1-L03.qmd
+++ b/C1-L03.qmd
@@ -57,6 +57,9 @@ $$
 $$ {#eq-l3-bernoulli-variance}
 
 ```{python}
+#| label: "bernoulli-distribution"
+#| fig-cap: "Bernoulli distribution"
+
 import numpy as np
 from scipy.stats import bernoulli
 import matplotlib.pyplot as plt
@@ -96,7 +99,9 @@ for a fuller [biography see](https://mathshistory.st-andrews.ac.uk/Biographies/B
 
 ### The Binomial Distribution
 
-$$\overbrace{\underbrace{\fbox{0}\ \ldots \fbox{0}}_{N_0}\ \underbrace{\fbox{1}\ \ldots \fbox{1}}_{N_1}}^N $$ {#eq-l3-bernulli-experiment}
+$$
+\overbrace{\underbrace{\fbox{0}\ \ldots \fbox{0}}_{N_0}\ \underbrace{\fbox{1}\ \ldots \fbox{1}}_{N_1}}^N 
+$$ {#eq-l3-bernulli-experiment}
 
 The Binomial distribution models `counts` of successes in independent Bernoulli trials \index{Bernoulli trial}. It arises when we need to consider the summing N independent and identically distributed Bernoulli RV with the same probability of success $\theta$.
 
@@ -497,7 +502,9 @@ $$
 
 The **Poisson distribution** \index{Poisson distribution} arises when modeling **count** data. The parameter $\lambda > 0$ is the `rate` at which we expect to observe the thing we are counting. We write this as $X \sim Poisson(\lambda)$
 
-$$P(X = x \mid \lambda) = \frac{\lambda^x e^{−\lambda}}{x!} \qquad \forall x \in \mathbb{N}_0 \qquad \text{PDF}$$ {#eq-l3-poisson-PMF}
+$$
+P(X = x \mid \lambda) = \frac{\lambda^x e^{−\lambda}}{x!} \qquad \forall x \in \mathbb{N}_0 \qquad \text{PDF}
+$$ {#eq-l3-poisson-PMF}
 
 $$
 \mathbb{E}[X] = \lambda \qquad \text{Expectation}
@@ -551,4 +558,5 @@ $$ {#eq-l3-Hypergeometric-expectation}
 
 $$
 \mathbb{V}ar[X]=N\,\frac{ab}{(a + b)^2}\,\frac{a+b-N}{a+b-1} \qquad \text (variance)
-$$ {#eq-l3-Hypergeometric-variance} ·
+$$ {#eq-l3-Hypergeometric-variance}
+
