improvements and additions

--- a/A12.qmd
+++ b/A12.qmd
@@ -1,15 +1,15 @@
 ---
-title: "Books on R"
+title: "Bayesian Books in R & Python"
 bibliography: references.bib
 ---
 
-# additional resources
+# Additional resources
 
-there are many books on R and Python that can help you learn more about these languages and how to use them for data analysis. 
+there are many books in R and Python that can help you learn more about these languages and how to use them for data analysis. 
 
 Here are some of the most popular books on R and Python:
 
-## Books on R
+## Books in R
 
 - [R for Data Science](https://r4ds.hadley.nz/) by Hadley Wickham and Garrett Grolemund
 - [Advanced R](https://adv-r.hadley.nz/) by Hadley Wickham
@@ -26,9 +26,12 @@ Here are some of the most popular books on R and Python:
 - [Text Mining with R](https://www.tidytextmining.com/) by Julia Silge and David Robinson
 
 
+## Books in Python
 
-
-## Books on Python
-
-- [An Introduction to Statistical Learning](https://www.statlearning.com/)
-- [https://wesmckinney.com/book/](Python for Data Analysis) by Wes McKinney
+- [An Introduction to Statistical Learning with python](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie, and Robert Tibshirani
+-  [Python for Data Analysis](https://wesmckinney.com/book/) by Wes McKinney of Pandas infamy  parquet and Apache Arrow
+- [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) by Jake VanderPlas
+- [Think Stats](https://greenteapress.com/thinkstats2/thinkstats2.pdf) by Allen B. Downey
+- [Think Bayes](https://greenteapress.com/thinkbayes2/thinkbayes2.pdf) by Allen B. Downey
+- [Probabilistic Programming & Bayesian Methods for Hackers
+](https://dataorigami.net/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers/) by Cameron Davidson-Pilon
