--- a/C3-L01.qmd
+++ b/C3-L01.qmd
@@ -1,6 +1,10 @@
 ---
 title : 'Basic Concepts of Mixture Models'
 subtitle : 'Bayesian Statistics: Mixture Models'
+categories:
+  - Bayesian Statistics
+keywords:
+  - Mixture Models
 ---
 
 # Basic Definitions
@@ -37,7 +41,7 @@ from scipy.stats import norm
 
 :::
 
-Handout: [Mixture model](handouts/mixtures.pdf)
+Handout: [Mixture model](handouts/c3-mixtures.pdf)
 
 Mixture models provide a flexible approach to modeling data and are useful in *density estimation*, *clustering* and *classification* problems:
 
@@ -50,12 +54,12 @@ Mixture models provide a flexible approach to modeling data and are useful in *d
 
 ![Mixtures definitions](images/c3l01-ss-01-mixtures.png){.column-margin}
 
-::: #def-mixture
+::: {#def-mixture}
 Let $ω_1 , \ldots , ω_K$ be a collection of real numbers such that $0 \le ω_k \le 1$ and $\sum^K_{k=1} ω_k = 1$, and $G_1, \ldots, G_K$ be a collection of cumulative distribution functions. A random variable $X$ with cumulative distribution function $F(x) = Pr(X \le x)$ of the form
 
 
 $$
-F(x) =\sum^K_{k=1} \underbrace{ω_k}_{weight}\underbrace{G_k(X)}_{component} \qquad
+F(x) =\sum^K_{k=1} \underbrace{ω_k}_{weight}\ \cdot \ \underbrace{G_k(X)}_{component} \qquad
 $$ {#eq-finite-mixture-cdf}
 
 
@@ -63,7 +67,7 @@ is said to follow **a finite mixture distribution** with K components.
 
 
 $$
-f(x) =\sum^K_{k=1} \underbrace{ω_k}_{weight}\underbrace{g_k(X)}_{component} \qquad
+f(x) =\sum^K_{k=1} \underbrace{ω_k}_{weight}\ \cdot \ \underbrace{g_k(X)}_{component} \qquad
 $$ {#eq-finite-mixture-pdf}
 
 
@@ -109,7 +113,7 @@ $$ {#eq-exponential-mixture-density}
     -   Asymmetric distributions @fig-Mixture-Gaussians-skewed
     -   Zero inflated distribution @fig-Zero-inflated-log-Gaussian-R  @fig-Zero-inflated-negative-binomial-R
 
-::: #exm-location-mixture-normals
+::: {#exm-location-mixture-normals}
 ## Location mixture of Normals
 
 -   This is a mixture of Gaussian distributions with the same variance but different means.
@@ -123,7 +127,7 @@ $$ {#eq-location-mixture-normals}
 
 :::
 
-::: #exm-location-scale-mixture-normals
+::: {#exm-location-scale-mixture-normals}
 ## Location scale mixture of Normals
 
 -   This time we have a mixture of Gaussian distributions with different means and variances.
@@ -157,7 +161,7 @@ The variance of a mixture is not as straightforward to compute, as it involves t
 
 ### Example of a Bimodal mixture of Gaussians
 
-::: panel-tabset
+::: {.panel-tabset}
 ## R
 
 ```{r}
@@ -215,7 +219,7 @@ f(x) = 0.55 \times N(0, 2) + 0.45 \times N(3, 4) \qquad
 $$ {#eq-unimodal-skewed-gaussian-mixture-pdf}
 
 
-::: panel-tabset
+::: {.panel-tabset}
 ## R
 
 ```{r}
@@ -268,7 +272,7 @@ f(x) = 0.40 \times N(0, 2) + 0.40 \times N(0, 4) + 0.20 \times N(0, 5) \qquad
 $$ {#eq-unimodal-heavy-tailed-gaussian-mixture-pdf}
 
 
-::: panel-tabset
+::: {.panel-tabset}
 ## R
 
 ```{r}
@@ -344,7 +348,7 @@ f(x) = 0.3 \times \mathbb{I}_{x\ge0} + 0.7 \times \mathcal{LN}(1.5, 0.5) \qquad
 $$ {#eq-zero-inflated-log-gaussian-pdf}
 
 
-::: panel-tabset
+::: {.panel-tabset}
 ## R
 
 ```{r}
@@ -405,7 +409,7 @@ f(x) = 0.2 \times \mathbb{I}_{x=0} + 0.8 \times NB(8, 0.6) \qquad
 $$ {#eq-zero-inflated-negative-binomial-pdf}
 
 
-::: panel-tabset
+::: {.panel-tabset}
 ## R
 
 ```{r}
