--- a/C2-L01.qmd
+++ b/C2-L01.qmd
@@ -5,6 +5,7 @@ categories:
   - Bayesian Statistics
   - Monte Carlo Estimation
 keywords:
+  - Notes
   - Statistical Modeling
   - MCMC
   - Overfitting
